Adding users route
